fix blend menu / pan scrollbar z indices

--- a/src/styles/core/pan-scrollbar.module.css
+++ b/src/styles/core/pan-scrollbar.module.css
@@ -1,7 +1,7 @@
 .track {
     grid-area: bottom-bar;
     position: absolute;
-    z-index: 2;
+    z-index: 1;
     left: 0;
     right: 0;
     top: -7px;
